# Auto-Dash

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  providers.py  schemas.py
apps/api/app/ai/prompts/: cleaning_plan_generation.md  dashboard_code_generation.md  error_self_correction.md  kpi_chart_recommendation.md  profiling_interpretation.md  semantic_model_generation.md
apps/api/app/api/: router.py  schemas.py
apps/api/app/api/routes/: artifacts.py  cleaning.py  collaboration.py  dashboard.py  datasets.py  projects.py  recommendations.py  semantic.py  validation.py
apps/api/app/core/: config.py  errors.py
apps/api/app/db/: models.py  session.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/artifacts/: __init__.py  service.py
apps/api/app/modules/cleaning/: __init__.py  executor.py  runner.py  safety.py  schemas.py  service.py
apps/api/app/modules/collaboration/: __init__.py  audit.py  service.py
apps/api/app/modules/dashboard/: __init__.py  schemas.py  service.py
apps/api/app/modules/ingestion/: __init__.py  service.py
apps/api/app/modules/orchestration/: service.py
apps/api/app/modules/profiling/: __init__.py  schemas.py  service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 202604250001_initial.py
apps/api/tests/: test_cleaning_safety.py  test_profiling.py  test_semantic_service.py
(+35 files in other folders)
