[project]
name = "dashforge-api"
version = "0.1.0"
description = "DashForge Core FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "duckdb>=1.0",
  "fastapi>=0.111",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "polars>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
